users are now persistent, added auth routes

--- a/atm_app/templates/index.html
+++ b/atm_app/templates/index.html
@@ -1,6 +1,6 @@
 <h1>ATM Machine 💵💴💷💶</h1>
 <h2>Enter Credentials</h2>
-<form action="/withdraw">
+<form action="" method="post">
     <label for="account">Account</label><br>
     <input type="text" id="account" name="account"><br>
     <label for="pin">Pin</label><br>
