pretty much done

--- a/atm_app/templates/index.html
+++ b/atm_app/templates/index.html
@@ -1,4 +1,3 @@
-<h1>ATM Machine 💵💴💷💶</h1>
 <h2>Enter Credentials</h2>
 <form action="" method="post">
     <label for="account">Account</label><br>
@@ -8,3 +7,6 @@
     <br>
     <input type="submit" value="Submit">
 </form>
+{% if incorrect_password %}
+<h2 class="invalid">Invalid Account or PIN</h2>
+{% endif %}
