--- a/atm_app/templates/template.html
+++ b/atm_app/templates/template.html
@@ -11,9 +11,19 @@
     margin-left: 32px;
     margin-top: 32px;
   }
+
+  .money {
+    font-size: 32pt;
+    margin-bottom: 32px;
+  }
+
+  .invalid {
+    color: rgb(255, 0, 0);
+  }
 </style>
 
 <body>
+  <h1>ATM Machine 💵💴💷💶</h1>
   {% include child %}
 </body>
 
