money prints in a grid

--- a/atm_app/templates/thankyou.html
+++ b/atm_app/templates/thankyou.html
@@ -13,9 +13,5 @@
         </th>
     </tr>
 </table>
-<ul>
-    {% for val in currency_amount %}
-    <li>💵</li>
-    {% endfor %}
-</ul>
+<p>{% for val in currency_amount %}💵{% endfor %}</p>
 <br>
