added menu and change pin functionality

--- a/atm_app/templates/index.html
+++ b/atm_app/templates/index.html
@@ -1,9 +1,9 @@
 <h2>Enter Credentials</h2>
 <form action="" method="post">
     <label for="account">Account</label><br>
-    <input type="text" id="account" name="account"><br>
+    <input type="text" id="account" name="account" required><br>
     <label for="pin">Pin</label><br>
-    <input type="password" id="pin" name="pin"><br>
+    <input type="password" id="pin" name="pin" required><br>
     <br>
     <input type="submit" value="Submit">
 </form>
