--- a/atm_app/templates/thankyou.html
+++ b/atm_app/templates/thankyou.html
@@ -7,7 +7,7 @@
             <h3>Here are your funds</h3>
         </th>
         <th>
-            <form action="/">
+            <form action="/menu">
                 <input type="submit" value="Continue">
             </form>
         </th>
