--- a/atm_app/templates/thankyou.html
+++ b/atm_app/templates/thankyou.html
@@ -1,6 +1,6 @@
 <h2>Thank you for using this ATM</h2>
 <div class="money">Updated Balance: ${{ balance }}</div>
-<div class="money">Withdrew: ${{ amount_withdrawn }}</div>
+<div class="money">{{ type }}: ${{ amount }}</div>
 <table>
     <tr>
         <th>
