--- a/atm_app/templates/withdraw.html
+++ b/atm_app/templates/withdraw.html
@@ -5,5 +5,6 @@
     <label for="currency_amount">Please specify how much you would like to withdraw</label><br>
     <input type="number" id="currency_amount" name="currency_amount" min="0"><br>
     <br>
-    <input type="submit" value="Withdraw">
+    <input type="submit" name="back" value="back">
+    <input type="submit" name="withdraw" value="Withdraw">
 </form>
