--- a/atm_app/templates/menu.html
+++ b/atm_app/templates/menu.html
@@ -2,7 +2,8 @@
 <p>Welcome "{{ account }}"</p>
 <div class="money">Balance: ${{ balance }}</div>
 <form action="/menu" method="post">
-    <button type="submit" name="type" value="withdraw">Withdraw</button> <br>
-    <button type="submit" name="type" value="change_pin">Change Pin</button> <br>
-    <button type="submit" name="type" value="/">Exit</button> <br>
+    <button type="submit" name="type" value="withdraw">Withdraw</button>
+    <button type="submit" name="type" value="deposit">Deposit</button>
+    <button type="submit" name="type" value="change_pin">Change Pin</button> <br> <br>
+    <button type="submit" name="type" value="/">Exit</button>
 </form>
