--- a/atm_app/templates/template.html
+++ b/atm_app/templates/template.html
@@ -8,8 +8,31 @@
 
 <style>
   body {
+    text-align: center;
     margin-left: 32px;
     margin-top: 32px;
+  }
+
+  input[type=submit], button[type=submit] {
+    #background-color: #4CAF50;
+
+    padding:5px 15px;
+    background:#ccc;
+    border:0 none;
+    cursor:pointer;
+    border-radius: 5px;
+  }
+
+  input[type=text]:focus, input[type=password]:focus {
+      border-color: black;
+      border-radius: 10px;
+  }
+
+  input[type=text], input[type=password], input[type=number] {
+    text-align: center;
+    padding:5px;
+    border:2px solid #ccc;
+    border-radius: 10px;
   }
 
   .money {
