--- a/atm_app/templates/change_pin.html
+++ b/atm_app/templates/change_pin.html
@@ -10,5 +10,5 @@
     <input type="submit" name="change" value="Change">
 </form>
 {% if incorrect_pin %}
-<h2 class="invalid">Incorrect Pin</h2>
+<h2 class="invalid">Incorrect/Invalid Pin</h2>
 {% endif %}
